<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal|vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/nameEditTxt"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/teneffus_adi"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textViewSaatDakika"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:fontFamily="monospace"
                    android:gravity="center|center_horizontal"
                    android:text="0:0"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/zamanLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/durationEditTxt"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="@string/duration"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="0"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/hafta1"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:textAlignment="gravity"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/hafta2"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:textAlignment="gravity"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/hafta3"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:textAlignment="gravity"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/hafta4"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:textAlignment="gravity"

                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/hafta5"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:textAlignment="gravity"

                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/hafta6"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:textAlignment="gravity"

                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/hafta7"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:textAlignment="gravity"
                    android:textSize="14sp" />
            </LinearLayout>

            <Switch
                android:id="@+id/switchActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:checked="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/activeState" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/duplicateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/duplicate"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:visibility="gone" />


        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>

