<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.NoActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/arkaplan"
                android:gravity="fill"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    style="@android:style/Widget.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:minHeight="?actionBarSize"
                    android:padding="@dimen/appbar_padding"
                    android:shadowColor="@color/common_google_signin_btn_text_light_pressed"
                    android:shadowDx="3"
                    android:shadowDy="5"
                    android:shadowRadius="3.5"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28sp" />

                <Switch
                    android:id="@+id/switchHizmet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:onClick="servisKapaAc"
                    android:text="@string/arkaplanHizmetiNo"
                    android:textColor="@color/beyaz"
                    android:textSize="14sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mesaj2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:minHeight="?actionBarSize"
                    android:padding="@dimen/appbar_padding"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/beyaz"
                    android:textSize="14sp" />

                <Switch
                    android:id="@+id/switchNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="dismissNextClick"
                    android:padding="15dp"
                    android:text="@string/dismissNext"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:id="@+id/switchAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="dismissAllClick"
                    android:padding="15dp"
                    android:text="@string/dismissAll"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Button
                    android:id="@+id/zillerButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:fontFamily="sans-serif"
                    android:onClick="zilleriAc"
                    android:text="@string/tab_text_1"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/settingsButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:fontFamily="sans-serif"
                    android:onClick="ayarlariAc"
                    android:text="@string/tab_text_2"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autoLink="all"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/about"
                    android:textAlignment="viewStart"
                    android:textColor="@color/beyaz"
                    android:textSize="18sp" />
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>